# aerial-surface-defect-segmentation

./: README.md  pyproject.toml
notebooks/: APS_360_Progress_Report_Code.ipynb
references/figures/: diagram.excalidraw
src/: config.py
src/etl/: extract.py  load.py  transform.py
