[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = ""
version = ""
description = ""
authors = []
readme = ""
license = ""
requires-python = ""

dependencies = []

[tool.setuptools]
package-dir = {}

[tool.setuptools.packages.find]
where = []

[tool.jupyter]
notebook_dir = ""
